# sonar-catalog

./: .gitignore  README.md  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.github/workflows/: deploy-docs.yml  publish.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: index.html
docs/src/content/docs/docs/: index.mdx
docs/src/content/docs/docs/formats/: custom.mdx  overview.mdx
docs/src/content/docs/docs/getting-started/: architecture.mdx  configuration.mdx  installation.mdx  quickstart.mdx
docs/src/content/docs/docs/guides/: crawling.mdx  demo-mode.mdx  discovery.mdx  exporting.mdx  nav-extraction.mdx  searching.mdx
docs/src/content/docs/docs/plugins/: hooks.mdx  manifest.mdx  overview.mdx  writing-a-plugin.mdx
docs/src/content/docs/docs/reference/: api.mdx  cli.mdx  database.mdx  environment.mdx
docs/src/content/docs/docs/web/: globe.mdx  search-ui.mdx
docs/src/styles/: custom.css
sonar_catalog/: __init__.py  cli.py  config.py  crawler.py  database.py  demo.py  discovery.py  hasher.py  mount_resolver.py  search.py
sonar_catalog/extractors/: __init__.py  base.py  jsf.py  nmea.py  sidecar.py  xtf.py
sonar_catalog/plugins/: __init__.py  hooks.py  manager.py  manifest.py
sonar_catalog/plugins/builtin/: __init__.py  exporters.py  formats.py  nav.py
sonar_catalog/web/: __init__.py  api.py  views.py
sonar_catalog/web/static/: app.css  app.js  globe.js
sonar_catalog/web/templates/: base.html  globe.html  index.html
tests/: conftest.py  test_cli.py  test_cli_commands.py  test_cli_main.py  test_config.py  test_crawler.py  test_crawler_ext.py  test_database.py  test_demo.py  test_discovery.py  test_exporters.py  test_extractors.py  test_fts.py  test_hasher.py  test_mount_resolver.py  test_mount_resolver_ext.py  test_nav_api.py  test_plugins.py  test_plugins_ext.py  test_search.py  test_web.py
